gccida/g2/c_expand_start_else
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_else/src/c-common.c:806:7: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
v1 = &if_stack_0[v0 - 1]; 
      ^~~~~~~~~~
      if_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_else/src/c-common.c:808:58: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if ( warn_parentheses && if_stack_pointer > 1 && ( v3 = &if_stack_0[v0 - 2], v3->compstmt_count == compstmt_count) ) 
                                                         ^~~~~~~~~~
                                                         if_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_else/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_expand_start_else/src/obj/c-common.o] Error 1
